[workspace]
resolver = "2"
members = [
    "poem-derive",
    "poem",
    "poem-openapi-derive",
    "poem-openapi",
    "poem-lambda",
    "poem-grpc-build",
    "poem-grpc",
]

[workspace.package]
authors = ["sunli <scott_s829@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/poem/"
homepage = "https://github.com/poem-web/poem"
repository = "https://github.com/poem-web/poem"
rust-version = "1.75"

[workspace.dependencies]
poem = { path = "poem", version = "3.0.4", default-features = false }
poem-derive = { path = "poem-derive", version = "3.0.4" }
poem-openapi-derive = { path = "poem-openapi-derive", version = "5.0.3" }
poem-grpc-build = { path = "poem-grpc-build", version = "0.4.2" }

proc-macro-crate = "3.2.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0" }
tokio = "1.40.0"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
regex = "1.10.6"
mime = "0.3.17"
tracing = "0.1.40"
chrono = { version = "0.4.38", default-features = false }
bytes = "1.7.1"
futures-util = "0.3.30"
tokio-stream = "0.1.15"
serde_yaml = "0.9"
quick-xml = { version = "0.36.1", features = ["serialize"] }
base64 = "0.22.1"
serde_urlencoded = "0.7.1"
indexmap = "2.5.0"
reqwest = { version = "0.12.7", default-features = false }
darling = "0.20.10"
http = "1.1.0"

# rustls, update together
rustls = "0.22.4"
tokio-rustls = "0.25.0"
