[workspace]
resolver = "2"
members = [
    "poem-derive",
    "poem",
    "poem-openapi-derive",
    "poem-openapi",
    "poem-lambda",
    "poem-grpc-build",
    "poem-grpc",
]

[workspace.package]
authors = ["sunli <scott_s829@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/poem/"
homepage = "https://github.com/poem-web/poem"
repository = "https://github.com/poem-web/poem"
rust-version = "1.81"

[workspace.dependencies]
poem = { path = "poem", version = "3.1.0", default-features = false }
poem-derive = { path = "poem-derive", version = "3.1.0" }
poem-openapi-derive = { path = "poem-openapi-derive", version = "5.1.1" }
poem-grpc-build = { path = "poem-grpc-build", version = "0.5.0" }

proc-macro-crate = "3.0.0"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "2.0" }
tokio = "1.39.1"
serde_json = "1.0.68"
sonic-rs = "0.3.5"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "2.0"
regex = "1.5.5"
mime = "0.3.16"
tracing = "0.1.36"
chrono = { version = "0.4.31", default-features = false }
bytes = "1.1.0"
futures-util = "0.3.17"
tokio-stream = "0.1.8"
serde_yaml = "0.9"
quick-xml = { version = "0.36.1", features = ["serialize"] }
base64 = "0.22.0"
serde_urlencoded = "0.7.1"
indexmap = "2.0.0"
reqwest = { version = "0.12.2", default-features = false }
darling = "0.20.10"
http = "1.0.0"

# rustls, update together
rustls = "0.22.0"
tokio-rustls = "0.25.0"
