[package]
name = "poem-dbsession"
version = "0.3.55"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Session storage with database for Poem."
keywords = ["http", "web", "framework", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

[package.metadata.workspaces]
independent = true

[package.metadata.docs.rs]
features = ["__sqlx-native-tls"]

[features]
default = []
sqlx-mysql-native-tls = ["sqlx/mysql", "sqlx/runtime-tokio-native-tls"]
sqlx-mysql-rustls = ["sqlx/mysql", "sqlx/runtime-tokio-rustls"]
sqlx-postgres-native-tls = ["sqlx/postgres", "sqlx/runtime-tokio-native-tls"]
sqlx-postgres-rustls = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
sqlx-sqlite-native-tls = ["sqlx/sqlite", "sqlx/runtime-tokio-native-tls"]
sqlx-sqlite-rustls = ["sqlx/sqlite", "sqlx/runtime-tokio-rustls"]

# Don't use the following features, just for testing.
__sqlx-native-tls = [
    "sqlx-mysql-native-tls",
    "sqlx-postgres-native-tls",
    "sqlx-sqlite-native-tls",
]
__sqlx-rustls = [
    "sqlx-mysql-rustls",
    "sqlx-postgres-rustls",
    "sqlx-sqlite-rustls",
]

[dependencies]
poem = { workspace = true, features = ["session"], default_features = true }

chrono = { workspace = true, default-features = false, features = ["clock"] }
serde_json.workspace = true
sqlx = { version = "0.6.0", optional = true, features = ["chrono", "json"] }
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
