[package]
name = "poem-derive"
version = "1.3.55"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Macros for poem"
keywords = ["http", "web", "framework", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "1.0.77", features = ["full"] }
