[package]
name = "poem-grpc-build"
version = "0.2.19"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Codegen module of poem-grpc."
keywords = ["http", "async", "grpc"]
categories = ["network-programming", "asynchronous"]

[dependencies]
prettyplease = "0.1.16"
proc-macro2 = "1.0.37"
prost-build = "0.11.1"
quote = "1.0.17"
syn = "1.0.91"
proc-macro-crate = "1.1.0"

[package.metadata.workspaces]
independent = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
