[package]
name = "poem-grpc-build"
version = "0.5.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Codegen module of poem-grpc."
keywords = ["http", "async", "grpc"]
categories = ["network-programming", "asynchronous"]

[dependencies]
prettyplease = "0.2.9"
prost-build = "0.13.1"
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
proc-macro-crate.workspace = true

[package.metadata.workspaces]
independent = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
