[package]
name = "poem-grpc"
version = "0.4.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "GRPC support for Poem."
keywords = ["http", "async", "grpc"]
categories = ["network-programming", "asynchronous"]

[features]
default = []
json-codec = ["serde", "serde_json"]

[dependencies]
poem = { workspace = true, default-features = true }

futures-util.workspace = true
async-stream = "0.3.3"
tokio = { workspace = true, features = ["io-util", "rt", "sync", "net"] }
flate2 = "1.0.24"
itoa = "1.0.2"
percent-encoding = "2.1.0"
bytes.workspace = true
prost = "0.13.1"
base64.workspace = true
prost-types = "0.13.1"
tokio-stream = { workspace = true, features = ["sync"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rustls = { workspace = true }
thiserror.workspace = true
fastrand = "2.0.0"
http.workspace = true
hyper = { version = "1.0.0", features = ["http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["client-legacy", "tokio"] }
http-body-util = "0.1.0"
tokio-rustls.workspace = true
tower-service = "0.3.2"
webpki-roots = "0.26"

[build-dependencies]
poem-grpc-build.workspace = true

[package.metadata.workspaces]
independent = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
