[package]
name = "poem-grpc"
version = "0.4.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "GRPC support for Poem."
keywords = ["http", "async", "grpc"]
categories = ["network-programming", "asynchronous"]

[features]
default = []
json-codec = ["serde", "serde_json"]
gzip = ["async-compression/gzip"]
deflate = ["async-compression/deflate"]
brotli = ["async-compression/brotli"]
zstd = ["async-compression/zstd"]
example_generated = []

[dependencies]
poem = { workspace = true, default-features = true }

futures-util.workspace = true
async-stream = "0.3.5"
tokio = { workspace = true, features = ["io-util", "rt", "sync", "net"] }
itoa = "1.0.11"
percent-encoding = "2.3.1"
bytes.workspace = true
prost = "0.13.2"
base64.workspace = true
prost-types = "0.13.2"
tokio-stream = { workspace = true, features = ["sync"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rustls = { workspace = true }
thiserror.workspace = true
fastrand = "2.1.1"
http.workspace = true
hyper = { version = "1.4.1", features = ["http1", "http2"] }
hyper-util = { version = "0.1.7", features = ["client-legacy", "tokio"] }
http-body-util = "0.1.2"
tokio-rustls.workspace = true
tower-service = "0.3.3"
webpki-roots = "0.26"
async-compression = { version = "0.4.12", optional = true, features = ["tokio"] }
sync_wrapper = { version = "1.0.1", features = ["futures"] }

[build-dependencies]
poem-grpc-build.workspace = true

[package.metadata.workspaces]
independent = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
