[package]
name = "poem-lambda"
version = "1.3.56"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Poem for AWS Lambda"
keywords = ["http", "web", "framework", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

[dependencies]
poem = { workspace = true, default-features = false }

lambda_http = { version = "0.8.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
