[package]
name = "poem-mcpserver-macros"
version = "0.1.7"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Macros for poem-mcpserver"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
