[package]
name = "poem-mcpserver"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "MCP Server implementation for Poem"
keywords = ["framework", "async", "gcp", "ai"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

[features]
sse = ["poem"]

[dependencies]
poem-mcpserver-macros.workspace = true

schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.39", features = ["macros", "formatting", "parsing"] }
tokio = { version = "1.44.1", features = ["io-std", "io-util"] }
poem = { version = "3.1.7", features = ["sse"], optional = true }
rand = "0.9.0"
tokio-util = { version = "0.7.14", features = ["io"] }
async-stream = "0.3.6"
