[package]
name = "poem-mcpserver"
version = "0.1.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "MCP Server implementation for Poem"
keywords = ["framework", "async", "gcp", "ai"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]

[features]
sse = ["poem"]

[dependencies]
poem-mcpserver-macros.workspace = true

schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["macros", "formatting", "parsing"] }
tokio = { workspace = true, features = ["io-std", "io-util"] }
poem = { workspace = true, features = ["sse"], optional = true }
rand.workspace = true
tokio-util = { workspace = true, features = ["io"] }
async-stream.workspace = true
tracing.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
