[package]
name = "poem-openapi-derive"
version = "2.0.27"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Macros for poem-openapi"
keywords = ["http", "async", "openapi", "swagger"]
categories = ["network-programming", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20.1"
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "visit-mut"] }
thiserror.workspace = true
indexmap = "2.0.0"
regex.workspace = true
http = "0.2.5"
mime.workspace = true

[package.metadata.workspaces]
independent = true
