[package]
name = "poem-openapi-derive"
version = "5.1.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Macros for poem-openapi"
keywords = ["http", "async", "openapi", "swagger"]
categories = ["network-programming", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "visit-mut"] }
thiserror.workspace = true
indexmap.workspace = true
regex.workspace = true
http.workspace = true
mime.workspace = true

[package.metadata.workspaces]
independent = true
