[package]
name = "poem-openapi"
version = "2.0.24"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "OpenAPI support for Poem."
keywords = ["http", "async", "openapi", "swagger"]
categories = ["network-programming", "asynchronous"]

[features]
swagger-ui = []
rapidoc = []
redoc = []
openapi-explorer = []
email = ["email_address"]
hostname = ["hostname-validator"]
static-files = ["poem/static-files"]
websocket = ["poem/websocket"]

[dependencies]
poem-openapi-derive = { path = "../poem-openapi-derive", version = "2.0.24" }
poem = { workspace = true, default_features = true, features = [
  "multipart",
  "tempfile",
  "cookie",
  "sse",
  "xml",
  "yaml",
] }

tokio = { workspace = true, features = ["fs"] }
serde_json.workspace = true
serde_yaml = "0.9.0"
quick-xml = { version = "0.27.1", features = ["serialize"] }
serde_urlencoded = "0.7.1"
base64 = "0.21.0"
serde.workspace = true
derive_more = "0.99.16"
num-traits = "0.2.14"
regex.workspace = true
mime.workspace = true
thiserror.workspace = true
bytes.workspace = true
futures-util.workspace = true

# Non-feature optional dependencies
email_address = { version = "0.2.1", optional = true }
hostname-validator = { version = "1.1.0", optional = true }

# Feature optional dependencies
chrono = { workspace = true, optional = true, default-features = false, features = [
  "clock",
] }
time = { version = "0.3.9", optional = true, features = [
  "parsing",
  "formatting",
] }
uuid = { version = "1.1.0", optional = true }
url = { version = "2.2.2", optional = true }
bson = { version = "2.0.0", optional = true }
rust_decimal = { version = "1.22.0", optional = true }
humantime = { version = "2.1.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
poem = { workspace = true, features = ["test"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.workspaces]
independent = true
