[package]
name = "poem-openapi"
version = "2.0.26"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "OpenAPI support for Poem."
keywords = ["http", "async", "openapi", "swagger"]
categories = ["network-programming", "asynchronous"]

[features]
swagger-ui = []
rapidoc = []
redoc = []
openapi-explorer = []
email = ["email_address"]
hostname = ["hostname-validator"]
static-files = ["poem/static-files"]
websocket = ["poem/websocket"]

[dependencies]
poem-openapi-derive.workspace = true
poem = { workspace = true, default-features = true, features = [
  "multipart",
  "tempfile",
  "cookie",
  "sse",
  "xml",
  "yaml",
] }

tokio = { workspace = true, features = ["fs"] }
serde_json.workspace = true
serde_yaml.workspace = true
quick-xml.workspace = true
serde_urlencoded.workspace = true
base64.workspace = true
serde.workspace = true
derive_more = "0.99.16"
num-traits = "0.2.14"
regex.workspace = true
mime.workspace = true
thiserror.workspace = true
bytes.workspace = true
futures-util.workspace = true

# Non-feature optional dependencies
email_address = { version = "0.2.1", optional = true }
hostname-validator = { version = "1.1.0", optional = true }

# Feature optional dependencies
chrono = { workspace = true, optional = true, default-features = false, features = [
  "clock",
] }
time = { version = "0.3.9", optional = true, features = [
  "parsing",
  "formatting",
] }
uuid = { version = "1.1.0", optional = true }
url = { version = "2.2.2", optional = true }
bson = { version = "2.0.0", optional = true }
rust_decimal = { version = "1.22.0", optional = true }
humantime = { version = "2.1.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
poem = { workspace = true, features = ["test"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.workspaces]
independent = true
