[package]
name = "poem-openapi"
version = "5.1.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "OpenAPI support for Poem."
keywords = ["http", "async", "openapi", "swagger"]
categories = ["network-programming", "asynchronous"]

[features]
swagger-ui = []
rapidoc = []
redoc = []
openapi-explorer = []
email = ["email_address"]
hostname = ["hostname-validator"]
static-files = ["poem/static-files"]
websocket = ["poem/websocket"]
geo = ["dep:geo-types", "dep:geojson"]
sonic-rs = ["poem/sonic-rs"]

[dependencies]
poem-openapi-derive.workspace = true
poem = { workspace = true, default-features = true, features = [
  "multipart",
  "tempfile",
  "cookie",
  "sse",
  "xml",
  "yaml",
] }

tokio = { workspace = true, features = ["fs"] }
serde_json.workspace = true
serde_yaml.workspace = true
quick-xml.workspace = true
serde_urlencoded.workspace = true
base64.workspace = true
serde.workspace = true
derive_more = { version = "1.0", features = ["display"] }
num-traits = "0.2.14"
regex.workspace = true
mime.workspace = true
thiserror.workspace = true
bytes.workspace = true
futures-util.workspace = true
indexmap.workspace = true

# Non-feature optional dependencies
email_address = { version = "0.2.1", optional = true }
hostname-validator = { version = "1.1.0", optional = true }

# Feature optional dependencies
chrono = { workspace = true, optional = true, default-features = false, features = [
  "clock",
] }
time = { version = "0.3.36", optional = true, features = [
  "parsing",
  "formatting",
] }
uuid = { version = "1.1.0", optional = true }
url = { version = "2.2.2", optional = true }
bson = { version = "2.0.0", optional = true }
rust_decimal = { version = "1.22.0", optional = true }
humantime = { version = "2.1.0", optional = true }
ipnet = { version = "2.7.1", optional = true }
prost-wkt-types = { version = "0.6.0", optional = true }
geo-types = { version = "0.7.12", optional = true }
geojson = { version = "0.24.1", features = ["geo-types"], optional = true }
sqlx = { version = "0.8.0", features = [
  "json",
  "postgres",
  "sqlite",
  "mysql",
], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
poem = { workspace = true, features = ["test"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.workspaces]
independent = true
