[package]
name = "poem-template"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2021"
description = "Template engine for Poem."
readme = "README.md"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/poem/"
homepage = "https://github.com/poem-web/poem"
repository = "https://github.com/poem-web/poem"
keywords = ["http", "web", "framework", "async", "template"]
categories = [
    "network-programming",
    "asynchronous",
    "template-engine",
    "web-programming::http-server",
    "web-programming::websocket",
]

[dependencies]
